mobile version complete

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,3 +1,13 @@
 @import "variables.scss";
+@import "mixins/wrapper.scss";
 @import "scaffolding.scss";
-@import "blocks/introducing.scss"
+@import "blocks/introducing.scss";
+@import "blocks/conditions.scss";
+@import "blocks/list.scss";
+@import "blocks/advantages.scss";
+@import "blocks/insertion.scss";
+@import "blocks/guarantees.scss";
+@import "blocks/cost.scss";
+@import "blocks/questions.scss";
+@import "blocks/btn.scss";
+
