--- a/app/sass/blocks/conditions.scss
+++ b/app/sass/blocks/conditions.scss
@@ -17,3 +17,48 @@
   margin: 0 auto;
   margin-bottom: 20px;
 }
+
+@media (min-width: $tablet-width) {
+  .conditions{
+    max-width: 850px;
+    margin: 0 auto;
+    background: url('../img/author/glass-desktop.jpg') no-repeat;
+    background-position: 110% 0;
+    padding-bottom: 120px;
+    margin-bottom: 40px;
+
+  }
+  .conditions__wrapper{
+    @include wrapper-tablet;
+    padding-right: 330px;
+  }
+
+  .conditions__title{
+    width: 100%;
+    margin: 0;
+    margin-bottom: 20px;
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
+
+
+@media (min-width: $desktop-width) {
+  .conditions{
+    max-width: none;
+    background: #ffffff;
+  }
+
+  .conditions__wrapper{
+    @include wrapper-desktop;
+    padding-right: 680px;
+    position: relative;
+    z-index: 1;
+  }
+
+  .conditions__title{
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 23px;
+  }
+}
