--- a/app/sass/blocks/list.scss
+++ b/app/sass/blocks/list.scss
@@ -42,3 +42,22 @@
       transform: rotate(-45deg);
     }
 }
+
+
+@media (min-width: $tablet-width) {
+  .list__item{
+    font-size: 16px;
+    line-height: 21px;
+    margin-bottom: 13px;
+    color: #636363;
+
+  }
+}
+
+
+@media (min-width: $desktop-width) {
+  .list__item{
+    font-size: 18px;
+line-height: 23px;
+  }
+}
